Ticket #28130: Set a fixed width for the date and time input in forms to reduce unnecessary white space. Since the values in the defaultSizes array of the MediaQueryControl resizing algorithm were increased in the first place due to the size of the datetime-input field, this has now been reduced again.

--- a/com.top_logic.themes.core/src/main/webapp/style/form.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/form.css
@@ -1630,6 +1630,14 @@ span.cIconSelect .input-image.cannot-edit i {
     letter-spacing: var(--body-02-letter-spacing);
 }
 
+.cDateInput input {
+    width: 7rem;
+}
+
+.cTimeInput input {
+    width: 4.5rem;
+}
+
 .cTextInput.mandatory input,
 .cIntegerInput.num.mandatory input,
 .cExpandableTextInput.mandatory input,
